# MTS-HACKATHON

./: .gitignore  README.md  localscript-openapi.yaml
docs/: API_CONTRACTS.md  HACKATHON_SPECS.txt  INSTALL_LINUX.md  INSTALL_WINDOWS.md  PROJECT_ARCHITECTURE.md
localscript-agent/: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
localscript-agent/app/: __init__.py  cli_settings.py  code_checks.py  config.py  extract.py  generate_parse.py  main.py  models_io.py  ollama_client.py  pipeline.py  prompts.py  sandbox.py  semantic.py  validate.py
localscript-agent/benchmarks/: public_tasks.json  synthetic_smoke.json
localscript-agent/data/synthetic/: README.md  seed_agent_examples.jsonl
localscript-agent/docker/: entrypoint-ollama.sh
localscript-agent/docs/: AGENT_WORKFLOW.md  CLI_CURRENT_BEHAVIOR.md  SETUP_GUIDE.md  SUBMISSION.md  architecture.md  hardware.md  vram_smoke.md
localscript-agent/docs/experiments/: BEST_CONFIG.md  SUMMARY.md
localscript-agent/experiments/: runs.csv
localscript-agent/models/: Modelfile.example
localscript-agent/scripts/: bootstrap_dev.sh  capture_demo_io.py  check_ollama.sh  demo_cli.py  demo_streamlit.py  eval_public.py  generate_synthetic_dataset.py  quality.sh
localscript-agent/tests/: test_api_smoke.py  test_code_checks.py  test_extract.py  test_generate_parse.py  test_models_debug.py  test_prompts_build.py  test_repair_loop_smoke.py  test_sandbox.py  test_semantic.py  test_validate.py
localscript-agent/training/: README.md
scripts/: render_c4.sh
(+9 files in other folders)
