[project]
name = "localscript-agent"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
